--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,5 +15,7 @@
         "sourceType": "module"
     },
     "rules": {
+        "import/extensions": ["off"],
+        "no-param-reassign": ["off"]
     }
 }
